# OpenTaskFund

./: README.md  manage.py  pyproject.toml
openstaskfund/: asgi.py  settings.py  urls.py  wsgi.py
otf_mvt/: apps.py  models.py  urls.py  views.py
otf_mvt/management/commands/: mock_data.py
otf_mvt/templates/: index.html
otf_mvt/templates/action/: action.html  card.html
otf_mvt/templates/feature/: card.html  new.html
