[tool.poetry]
name = "opentaskfund"
version = "0.1.0"
description = "Task + Vote + Crowdfunding"
authors = ["JonasFW13 <jturbeaux@pm.me>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-rest-framework = "^0.1.0"
stripe = "^11.2.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
